# markdown-syntax

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release-plz.yml
docs/: index.md
docs/agent/: current.md
docs/archive/: 2026-06-19-markdown-syntax-conformance-investigation.md
docs/decisions/: 001-default-crate-boundary.md  002-html-renderer-boundary.md  003-test-corpus-boundaries.md  004-correctness-workflow.md  005-public-api-ergonomics.md
docs/plans/: 2026-06-19-markdown-syntax-test-reorg.md  2026-06-20-markdown-syntax-html-renderer.md  2026-06-20-public-api-ergonomics-plan.md  2026-06-23-markdown-truth-parse-contract-plan.md
docs/tasking/: 2026-06-19-markdown-syntax-conformance-fix.md
src/: ast.rs  diagnostic.rs  entities.rs  lib.rs  options.rs  parse.rs  serialize.rs  span.rs  unicode_punctuation.rs  validate.rs
src/html/: blocks.rs  escape.rs  footnotes.rs  inlines.rs  mod.rs  refs.rs  tables.rs
tests/: fixtures.rs  html_conformance.rs  html_regressions.rs  maximal_default.rs  parse_block_regressions.rs  parse_inline_regressions.rs  parse_span_contract.rs  serialize_regressions.rs  validate_regressions.rs
tests/fixtures/conformance/THIRD-PARTY-LICENSES/: NOTICE.comrak.md  NOTICE.markdown-rs.md
tests/fixtures/conformance/commonmark/: attention.cases  autolink.cases  block_quote.cases  character_escape.cases  character_reference.cases  code_fenced.cases  code_indented.cases  code_text.cases  commonmark.cases  fuzz.cases  (+28 more)
tests/html_conformance/: CONFORMANCE.md  extractor.rs  normalizer.rs  report.rs  runner.rs  types.rs
tests/html_conformance/renderer/: blocks.rs  escape.rs  footnotes.rs  inlines.rs  mod.rs  refs.rs  tables.rs
tests/support/: fixtures.rs
(+266 files in other folders)
