[package]
name = "markdown-syntax"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "no_std + alloc Markdown syntax parser and serializer"
homepage = "https://github.com/plimeor/markdown-syntax"
repository = "https://github.com/plimeor/markdown-syntax"
license = "MIT OR Apache-2.0"
keywords = ["markdown", "commonmark", "gfm", "parser", "ast"]
categories = ["parser-implementations", "text-processing", "no-std"]

# The published package ships only the library, license, and readme. The vendored
# conformance corpus under tests/ is dev-only and is intentionally NOT
# redistributed (it contains third-party CommonMark/GFM/comrak/markdown-rs cases).
include = [
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/**",
]

[lib]
name = "markdown_syntax"
path = "src/lib.rs"

[features]
default = []
html = []

# Build docs.rs with the html feature so the renderer API is documented there.
[package.metadata.docs.rs]
features = ["html"]
